qqmljsimportvisitor: Fix bindings on prefixed attached properties

Previously these would have not been created properly. This change fixes
this and adds some tests.

Fixes: QTBUG-104197
Change-Id: I3d2d7d5a0e4019d9f7bd3496ea5762d4b7d680cd
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit c0a01a72f0d1050a16875e6a5062707fddcf791a)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>