tests/auto/qml/qmllint/data/prefixedAttachedProperty.qml
@@ -1,0 +1,5 @@
+import QtQuick as T
+
+T.Item {
+    T.Accessible.name: "Example"
+}
